Freedom Sanbox Ant Deploy/src/objects/Lead_Platform_User__c.object
<CustomObject>
    <description>Its is the custom Lead object created for standard platform user.</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Age</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Mobile__c</fullName>
        <label>Alternate Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appointment_SMS__c</fullName>
        <label>Appointment SMS</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Time__c</fullName>
        <label>Appointment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Christmas_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Christmas Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_date_Month__c</fullName>
        <formula>CASE( MONTH ( DATEVALUE( CreatedDate ) ) , 
1, &quot;January &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
2, &quot;Febuary &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
3, &quot;March &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
4, &quot;April &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
5, &quot;May &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
6, &quot;June &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
7, &quot;July &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
8, &quot;August &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
9, &quot;September &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
10, &quot;October &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
11, &quot;November &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
&quot;December &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created date Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Explanation__c</fullName>
        <label>Ffreedom Score Explanation</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Eight__c</fullName>
        <inlineHelpText>Have you taken enough health insurance for your family?</inlineHelpText>
        <label>Ffreedom Score Question Eight</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Five__c</fullName>
        <inlineHelpText>Do you know how much cash/cash equivalent is required for the same?</inlineHelpText>
        <label>Ffreedom Score Question Five</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Four__c</fullName>
        <inlineHelpText>Do you have cash (easily accessible) to maintain your lifestyle in case of  job/income 
loss?</inlineHelpText>
        <label>Ffreedom Score Question Four</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Nine__c</fullName>
        <inlineHelpText>Are all your personal properties insured against disasters or calamities?</inlineHelpText>
        <label>Ffreedom Score Question Nine</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_One__c</fullName>
        <inlineHelpText>Have you prepared a budget for your household expenses?</inlineHelpText>
        <label>Ffreedom Score Question One</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Seven__c</fullName>
        <inlineHelpText>Do you know how much insurance cover is required?</inlineHelpText>
        <label>Ffreedom Score Question Seven</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Six__c</fullName>
        <inlineHelpText>Have you taken life insurance cover?</inlineHelpText>
        <label>Ffreedom Score Question Six</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Ten__c</fullName>
        <inlineHelpText>How would you describe your overall income status?</inlineHelpText>
        <label>Ffreedom Score Question Ten</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Three__c</fullName>
        <inlineHelpText>What’s your monthly household expenditure?</inlineHelpText>
        <label>Ffreedom Score Question Three</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Two__c</fullName>
        <inlineHelpText>Do you follow your budgeting?</inlineHelpText>
        <label>Ffreedom Score Question Two</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score__c</fullName>
        <label>Ffreedom Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ideal_time_to_call__c</fullName>
        <label>Ideal time to call</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not For Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interested_In__c</fullName>
        <label>Interested In</label>
        <picklist>
            <picklistValues>
                <fullName>FP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Succession Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Tax Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts &amp; Book Keeping</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsLeadCreatedByPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLeadCreatedByPartner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTransferred__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Made true when custom lead object details are transferred to the standard lead object</description>
        <label>IsTransferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUnsubscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUnsubscribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_converted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jigsaw__c</fullName>
        <label>Data.com Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Campaign__c</fullName>
        <label>Latest Campaign</label>
        <picklist>
            <picklistValues>
                <fullName>ABC of Money for Whispering palms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diwali Chocolate Box Refferal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just Dial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malad Medical Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan. Nature. Grow for POD&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purpose of Life for Whispering Palms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>True Fitness Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ffreedom Score Online App with Reliance Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA with Oracle Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ffreedom Score Online App with RMF (Only Enquiry)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNI Creame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Financial Services (GO Building)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goldstar Jewellery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Happiness EXPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTVi Bloomberg - Smart Money</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>karamtara group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Study Circles - Bhayander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ffreedom Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netscribes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website - Careers Campaign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Engine_Type__c</fullName>
        <label>Lead Engine Type</label>
        <picklist>
            <picklistValues>
                <fullName>Just Dial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sulekha Classifieds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Name__c</fullName>
        <label>Lead Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>BNI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp Comm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar (MKT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar (WS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FP Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web-Onlinepromotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web-XRay</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <color>#FF9900</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Current /Permanent location</label>
        <picklist>
            <picklistValues>
                <fullName>Agartala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmedabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmednagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aizawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ajmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aligarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allahabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amritsar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anantapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ankleshwar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asansol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aurangabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALASORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bareilly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baroda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathinda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgaum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bellary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bengaluru/Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHABUA, KAIMUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhagalpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bharuch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhavnagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhillai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhubaneshwar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhuj</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Meeting #</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>TEXT (Salutation__c) &amp; &quot; &quot; &amp; First_Name__c &amp; &quot; &quot;  &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <label>No. of Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PreferredDepartment__c</fullName>
        <label>PreferredDepartment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_location__c</fullName>
        <label>Preferred location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <picklist>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_by_CustomLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred by Lead</label>
        <referenceTo>Lead_Platform_User__c</referenceTo>
        <relationshipLabel>Leads(Refferals)</relationshipLabel>
        <relationshipName>CustomLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <label>Related To</label>
        <picklist>
            <picklistValues>
                <fullName>Ffreedom</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Change_Date__c</fullName>
        <label>Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tribal_Activity_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tribal Activity Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Virtual_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Virtual Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tempReportDate__c</fullName>
        <label>tempReportDate</label>
        <type>Date</type>
    </fields>
    <label>Lead</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>Mobile__c</columns>
        <columns>Lead_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leads</pluralLabel>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <label>General</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AppointmentTime_Required_For_Meeting_Don</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNULL( Appointment_Time__c ) ,ISPICKVAL(  Lead_Status__c , &quot;Meeting Done&quot;))</errorConditionFormula>
        <errorDisplayField>Appointment_Time__c</errorDisplayField>
        <errorMessage>Please Enter The Appointment Time Before Changing The Lead Status To &quot;Meeting Done&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Appointment_Time_for_Meeting_Fixed</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL( Lead_Status__c , &apos;Meeting Fixed&apos;), ISNULL( Appointment_Time__c ))</errorConditionFormula>
        <errorDisplayField>Appointment_Time__c</errorDisplayField>
        <errorMessage>Appointment Time should be entered for Lead Status = &apos;Meeting Fixed&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Date_Required_For_Meeting_Done</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNULL(  Close_Date__c ) ,ISPICKVAL(  Lead_Status__c , &quot;Meeting Done&quot;))</errorConditionFormula>
        <errorDisplayField>Close_Date__c</errorDisplayField>
        <errorMessage>Please Enter The Close Date Before Changing The Lead Status To &quot;Meeting Done&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Compulsory_Fields_For_Meeting_Fixed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNULL( Appointment_Time__c ) ,ISPICKVAL(  Lead_Status__c , &quot;Meeting Fixed&quot;))</errorConditionFormula>
        <errorDisplayField>Appointment_Time__c</errorDisplayField>
        <errorMessage>Please Enter The Appointment Date And Time Before Changing The Lead Status To &quot;Meeting Fixed&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Compulsory_Fields_For_Meeting_Follow_Up</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(OR(ISPICKVAL(  Rating__c , &quot;Hot&quot;),ISPICKVAL( Rating__c , &quot;Warm&quot;),ISPICKVAL( Rating__c  , &quot;Cold&quot;))) , ISPICKVAL(  Lead_Status__c , &quot;Meeting Follow-up&quot;) )</errorConditionFormula>
        <errorDisplayField>Rating__c</errorDisplayField>
        <errorMessage>Please Enter the Rating For This Lead Before Changing The Lead Status To Meeting Follow-up</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ffreedom_Score_Required_For_Meeting_Don</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNULL( Ffreedom_Score__c ) ,ISPICKVAL(  Lead_Status__c , &quot;Meeting Done&quot;))</errorConditionFormula>
        <errorDisplayField>Ffreedom_Score__c</errorDisplayField>
        <errorMessage>Please Enter The Ffreedom Score Before Changing The Lead Status To &quot;Meeting Done&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_no_must_contain_10_digits</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(
OR(
ISBLANK( Mobile__c ),
REGEX( Mobile__c, &quot;[0-9]{10}&quot;))
)</errorConditionFormula>
        <errorDisplayField>Mobile__c</errorDisplayField>
        <errorMessage>Please enter the mobile no. which contains 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Probability_Required_For_Meeting_Done</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(OR(ISPICKVAL( Probability__c , &quot;25%&quot;),ISPICKVAL( Probability__c , &quot;50%&quot;),ISPICKVAL( Probability__c , &quot;75%&quot;),ISPICKVAL( Probability__c , &quot;0%&quot;),ISPICKVAL(  Probability__c , &quot;100%&quot;))) , ISPICKVAL(  Lead_Status__c , &quot;Meeting Done&quot;) )</errorConditionFormula>
        <errorDisplayField>Probability__c</errorDisplayField>
        <errorMessage>Please Enter The Probability For This Lead Before Changing The Lead Status To Meeting Done</errorMessage>
    </validationRules>
</CustomObject>